# xchange-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/bot/: xchange_bot.py
src/data/: currency_data.py
src/services/: api_service.py
src/utils/: formatter.py  keyboard_builder.py
